app/assets/stylesheets/_panels.scss
/* ======================= */
/* PANELS */
/* ======================= */

.u-base-panel {
  color: $white;

  &__heading {
    font-size: 1.2rem;
    font-weight: 600;
    margin: 0;
    padding-top: 30px;
  }

  &__content {
    padding-left: 40px;
    padding-right: 40px;
    // &:not(:last-child) { margin-bottom: 30px; }
  }

  &__action-button {
    position: absolute;
    top: 0;
    right: 0;
    padding: 8px 10px 12px;
    opacity: .5;

    &:hover {
      background-color: $accent-color;
      opacity: 1;
      cursor: pointer;
    }
  }

  &__action {
    background-color: lighten($black, 10);
    box-shadow: -2px -2px 4px rgba($black, .4);

    &__title {
      font-size: 1rem;
      font-weight: 600;
      padding: 8px 0;
      margin: 0;

      &:after {
        @extend .u-material-icons;
        content: 'close';
        float: right;
        opacity: 0;
      }
    }

    &__content {
      max-height: 0;
      padding-bottom: 0;
      overflow: hidden;
      @extend .u-transition;

      > :last-child {padding-bottom: 40px;}

      &.js-active {
        max-height: 900px;
        @extend .u-transition;
      }
    }

    &__button {}
    &__button--active   {}
  }

  &__large-icon {}
  &__small-text {}

}


// Panel structure and behavior related styles

.panel {
  width: 100%;
  margin-left: -100%;
  position: absolute;
  overflow-y: scroll;
  @extend .u-transition;
  
  @include breakpoint($medium) { height: 100vh; }
  

  .form__extra-links { 
    font-size: .8rem;
    text-align: center; 
    padding-top: 10px;
    
    a, span { 
      opacity: .4;
    }

    a:hover {
      opacity: 1;
      text-decoration: none;

    } 
  }

  @include breakpoint($medium) {
    position: relative;
    width: 400px;
    margin-left: -400px;
  }

  &--1 {
    background-color: #222;
    box-shadow: 2px 2px 5px rgba(black, .3);
    z-index: 50;
    @include breakpoint($large) { margin-left: 0; }
  }

  &--2 {
    background-color: #292929;
    @include breakpoint($large) { z-index: 49; }
  }

  &--3 {
    background-color: #333;
    @include breakpoint($large) { z-index: 48; }
  }

  &--4 {
    background-color: #333;
    @include breakpoint($large) { z-index: 47; }
  }

  &.js-active {
    margin-left: 0;
    box-shadow: 2px 2px 6px rgba(black, .4);
  }
}

